force-app/main/default/objects/Account/fields/Acc_Number__c.field-meta.xml
<CustomField>
    <fullName>Acc_Number__c</fullName>
    <label>Acc Number</label>
    <type>AutoNumber</type>
</CustomField>