force-app/main/default/objects/Account/fields/Marketing_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Type__c</fullName>
    <label>Marketing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relationship_to_Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Stylist</fullName>
            </value>
            <value>
                <fullName>Hair n Makeup</fullName>
            </value>
            <value>
                <fullName>Ad Release Agency</fullName>
            </value>
            <value>
                <fullName>Media House</fullName>
            </value>
            <value>
                <fullName>Digital Team</fullName>
            </value>
            <value>
                <fullName>Content Creator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>