force-app/main/default/objects/Account/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Referred by?</inlineHelpText>
    <label>Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>