force-app/main/default/objects/Account/validationRules/Marketing_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Type_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Relationship_to_Company__c , &quot;Marketing&quot;) , 
      ISBLANK( TEXT( Marketing_Type__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>Marketing_Type__c</errorDisplayField>
    <errorMessage>Please fill out the Marketing Type</errorMessage>
</ValidationRule>