force-app/main/default/objects/Account/validationRules/Referral_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( AccountSource , &quot;Referral&quot;) , ISBLANK( Referral__c ) )</errorConditionFormula>
    <errorDisplayField>Referral__c</errorDisplayField>
    <errorMessage>Please fill in the Referral Details</errorMessage>
</ValidationRule>